<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:checked="true"
        android:icon="@mipmap/menu_home"
        android:title="@string/nav_home" />


    <group android:checkableBehavior="single">
        <item android:title="@string/nav_common">
            <menu>
                <item
                    android:id="@+id/nav_lottery"
                    android:icon="@mipmap/nav_lottery"
                    android:title="@string/nav_lottery"/>
                <item
                    android:id="@+id/nav_violation"
                    android:icon="@mipmap/nav_violation"
                    android:title="@string/nav_violation"/>
                <item
                    android:id="@+id/nav_weather"
                    android:icon="@mipmap/nav_weather"
                    android:title="@string/nav_weather"/>
                <item
                    android:id="@+id/nav_identity"
                    android:icon="@mipmap/nav_identity"
                    android:title="@string/nav_identity"/>
                <item
                    android:id="@+id/nav_measurement"
                    android:icon="@mipmap/nav_measurement"
                    android:title="@string/nav_measurement"/>
                <item
                    android:id="@+id/nav_translation"
                    android:icon="@mipmap/nav_translation"
                    android:title="@string/nav_translation"/>
                <item
                    android:id="@+id/nav_women_rhythm"
                    android:icon="@mipmap/nav_women_rhythm"
                    android:title="@string/nav_women_rhythm"/>
                <item
                    android:id="@+id/nav_tv_show"
                    android:icon="@mipmap/nav_tv_show"
                    android:title="@string/nav_tv_show"/>
                <item
                    android:id="@+id/nav_recipes"
                    android:icon="@mipmap/nav_recipes"
                    android:title="@string/nav_recipes"/>
                <item
                    android:id="@+id/nav_calendar"
                    android:icon="@mipmap/nav_calendar"
                    android:title="@string/nav_calendar"/>
                <item
                    android:id="@+id/nav_ip"
                    android:icon="@mipmap/nav_ip"
                    android:title="@string/nav_ip"/>
                <item
                    android:id="@+id/nav_number_attribution"
                    android:icon="@mipmap/nav_number_attribution"
                    android:title="@string/nav_number_attribution"/>
                <item
                    android:id="@+id/nav_corporate_info"
                    android:icon="@mipmap/nav_corporate_info"
                    android:title="@string/nav_corporate_info"/>
                <item
                    android:id="@+id/nav_named"
                    android:icon="@mipmap/nav_named"
                    android:title="@string/nav_named"/>
            </menu>
        </item>
        <item android:title="@string/nav_entertainment">
            <menu>
                <item
                    android:id="@+id/nav_joke"
                    android:icon="@mipmap/nav_joke"
                    android:title="@string/nav_joke"/>
                <item
                    android:id="@+id/nav_conversion"
                    android:icon="@mipmap/nav_conversion"
                    android:title="@string/nav_conversion"/>
                <item
                    android:id="@+id/nav_avatars"
                    android:icon="@mipmap/nav_avatars"
                    android:title="@string/nav_avatars"/>
                <item
                    android:id="@+id/nav_wallpapers"
                    android:icon="@mipmap/nav_wallpapers"
                    android:title="@string/nav_wallpapers"/>
            </menu>
        </item>
        <item android:title="@string/nav_entertainment">
            <menu>
                <item
                    android:id="@+id/nav_exchange_rate"
                    android:icon="@mipmap/nav_exchange_rate"
                    android:title="@string/nav_exchange_rate"/>
                <item
                    android:id="@+id/nav_car_calculator"
                    android:icon="@mipmap/nav_car_calculator"
                    android:title="@string/nav_car_calculator"/>
                <item
                    android:id="@+id/nav_mortgage_calculator"
                    android:icon="@mipmap/nav_mortgage_calculator"
                    android:title="@string/nav_mortgage_calculator"/>
                <item
                    android:id="@+id/nav_rmb_rates"
                    android:icon="@mipmap/nav_rmb_rates"
                    android:title="@string/nav_rmb_rates"/>
                <item
                    android:id="@+id/nav_housing_fund"
                    android:icon="@mipmap/nav_housing_fund"
                    android:title="@string/nav_housing_fund"/>
                <item
                    android:id="@+id/nav_gold_prices"
                    android:icon="@mipmap/nav_gold_prices"
                    android:title="@string/nav_gold_prices"/>
            </menu>
        </item>
        <item android:title="@string/nav_study">
            <menu>
                <item
                    android:id="@+id/nav_dictionary"
                    android:icon="@mipmap/nav_dictionary"
                    android:title="@string/nav_dictionary"/>
                <item
                    android:id="@+id/nav_periodic_table"
                    android:icon="@mipmap/nav_periodic_table"
                    android:title="@string/nav_periodic_table"/>
                <item
                    android:id="@+id/nav_idiom"
                    android:icon="@mipmap/nav_idiom"
                    android:title="@string/nav_idiom"/>
                <item
                    android:id="@+id/nav_domain_search"
                    android:icon="@mipmap/nav_domain_search"
                    android:title="@string/nav_domain_search"/>
            </menu>
        </item>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
